[package]
name = "camp_chef_api"
version = "0.1.0"
authors = ["Carl Hurd <carl@basilisklabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
rusoto_core = "0.45.0"
rusoto_cognito_identity = "0.45.0"
rusoto_cognito_idp = "0.45.0"
rusoto_iot = "0.45.0"
chrono = "0.4"
async-trait = "0.1"
num = {version = "0.3", features = ["std", "rand"]}
hex = "0.4.2"
ring = "0.16.15"
rand = "0.7.3"
base64 = "0.13.0"
arrayref = "0.3.6"
srp = "0.5.0"
sha2 = "0.9.1"
reqwest = {version = "0.10.8", features = ["json", "gzip", "cookies"]}
rumqttc = "0.1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
rustls = "0.18.1"
serde_json = "1.0"
serde = "1.0"
text_io = "0.1.8"
futures = "0.3.6"
clap = "2.33.3"